crates/squealy/tests/compile_fail/explicit_insert_columns_reject_null_for_non_nullable.stderr
error[E0277]: the trait bound `Option<std::string::String>: squealy::IntoAssignmentValue<RequiredRecordTitle>` is not satisfied
  --> tests/compile_fail/explicit_insert_columns_reject_null_for_non_nullable.rs:14:10
   |
14 |         .row((None::<String>,))
   |          ^^^ the trait `IntoBindValue` is not implemented for `Option<std::string::String>`
   |
   = help: the following other types implement trait `IntoBindValue`:
             &std::string::String
             &str
             bool
             f32
             f64
             i128
             i16
             i32
           and $N others
   = note: required for `Option<std::string::String>` to implement `squealy::IntoAssignmentValue<RequiredRecordTitle>`
   = note: required for `squealy::NonNullableColumn` to implement `squealy::IntoInsertColumnValue<RequiredRecordTitle, Option<std::string::String>>`
   = note: required for `(RequiredRecordTitle,)` to implement `squealy::InsertColumnValues<RequiredRecord<'_>, (Option<std::string::String>,)>`
